--- a/client/code/index.html
+++ b/client/code/index.html
@@ -30,6 +30,7 @@
     <script src="hud/widgets/root.js" type="text/javascript"></script>
     <script src="hud/widgets/text.js" type="text/javascript"></script>
     <script src="hud/widgets/button.js" type="text/javascript"></script>
+    <script src="hud/widgets/book.js" type="text/javascript"></script>
     <script src="hud/hud.js" type="text/javascript"></script>
 	<script src="hud/notification.js" type="text/javascript"></script>
 	<script src="graphic/map_item.js" type="text/javascript"></script>
