--- a/client/code/index.html
+++ b/client/code/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name = "viewport" content = "initial-scale = 0.8, user-scalable = no">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black">
+	<meta name="viewport" content="initial-scale = 0.8, user-scalable = no">
 	<link rel="stylesheet" type="text/css" media="screen" href="style.css"/>
 	<script src="/socket.io/socket.io.js" type="text/javascript"></script>
 	<script src="libs/date.format.js" type="text/javascript"></script>
@@ -16,6 +16,7 @@
 	<script src="game_logic/state.js" type="text/javascript"></script>
 	<script src="tools/transition.js" type="text/javascript"></script>
 	<script src="tools/camera.js" type="text/javascript"></script>
+	<script src="tools/colorHelper.js" type="text/javascript"></script>
 	<script src="cryme/canvas.js" type="text/javascript"></script>
 	<script src="cryme/engine.js" type="text/javascript"></script>
 	<script src="cryme/battle.js" type="text/javascript"></script>
@@ -26,12 +27,12 @@
 	<script src="graphic/texture.js" type="text/javascript"></script>
 	<!--<script src="texture_animated.js" type="text/javascript"></script>-->
 	<script src="graphic/battleElement.js" type="text/javascript"></script>
-    <script src="hud/hud_element.js" type="text/javascript"></script>
-    <script src="hud/widgets/root.js" type="text/javascript"></script>
-    <script src="hud/widgets/text.js" type="text/javascript"></script>
-    <script src="hud/widgets/button.js" type="text/javascript"></script>
-    <script src="hud/widgets/book.js" type="text/javascript"></script>
-    <script src="hud/hud.js" type="text/javascript"></script>
+	<script src="hud/hud_element.js" type="text/javascript"></script>
+	<script src="hud/widgets/root.js" type="text/javascript"></script>
+	<script src="hud/widgets/text.js" type="text/javascript"></script>
+	<script src="hud/widgets/button.js" type="text/javascript"></script>
+	<script src="hud/widgets/book.js" type="text/javascript"></script>
+	<script src="hud/hud.js" type="text/javascript"></script>
 	<script src="hud/notification.js" type="text/javascript"></script>
 	<script src="graphic/map_item.js" type="text/javascript"></script>
 	<script src="graphic/tile_item_infos.js" type="text/javascript"></script>
