--- a/client/code/index.html
+++ b/client/code/index.html
@@ -32,7 +32,7 @@
 	<script src="hud/widgets/text.js" type="text/javascript"></script>
 	<script src="hud/widgets/button.js" type="text/javascript"></script>
 	<script src="hud/widgets/book.js" type="text/javascript"></script>
-    <script src="hud/widgets/list.js" type="text/javascript"></script>
+	<script src="hud/widgets/list.js" type="text/javascript"></script>
 	<script src="hud/hud.js" type="text/javascript"></script>
 	<script src="hud/notification.js" type="text/javascript"></script>
 	<script src="graphic/map_item.js" type="text/javascript"></script>
@@ -41,6 +41,7 @@
 	<script src="graphic/tile_item.js" type="text/javascript"></script>
 	<script src="graphic/diagram.js" type="text/javascript"></script>
 	<script src="effects/cloud.js" type="text/javascript"></script>
+	<script src="effects/tornado.js" type="text/javascript"></script>
 	<script src="effects/weather.js" type="text/javascript"></script>
 	<script src="entity/crop.js" type="text/javascript"></script>
 	<script src="entity/storage.js" type="text/javascript"></script>
