--- a/client/code/index.html
+++ b/client/code/index.html
@@ -36,6 +36,7 @@
 	<script src="hud/widgets/book_premade.js" type="text/javascript"></script>
 	<script src="hud/widgets/list.js" type="text/javascript"></script>
 	<script src="hud/widgets/list_layouts.js" type="text/javascript"></script>
+    <script src="hud/widgets/popup.js" type="text/javascript"></script>
 	<script src="hud/hud.js" type="text/javascript"></script>
 	<script src="hud/notification.js" type="text/javascript"></script>
 	<script src="graphic/map_item.js" type="text/javascript"></script>
