--- a/client/code/index.html
+++ b/client/code/index.html
@@ -36,7 +36,7 @@
 	<script src="hud/widgets/book_premade.js" type="text/javascript"></script>
 	<script src="hud/widgets/list.js" type="text/javascript"></script>
 	<script src="hud/widgets/list_layouts.js" type="text/javascript"></script>
-    <script src="hud/widgets/popup.js" type="text/javascript"></script>
+	<script src="hud/widgets/popup.js" type="text/javascript"></script>
 	<script src="hud/hud.js" type="text/javascript"></script>
 	<script src="hud/notification.js" type="text/javascript"></script>
 	<script src="graphic/map_item.js" type="text/javascript"></script>
@@ -64,6 +64,8 @@
 <canvas id="canvasAnimation" class="topLeft canvasDrawable" style="z-index: 1;" oncontextmenu="return false;">
 </canvas>
 <canvas id="canvasDebug" class="topLeft canvasDrawable" style="z-index: 2;" oncontextmenu="return false;">
+</canvas>
+<canvas id="canvasInformation" class="topLeft canvasDrawable" style="z-index: 3;" oncontextmenu="return false;">
 </canvas>
 <canvas id="canvasHud" class="topLeft canvasDrawable" style="z-index: 10;" oncontextmenu="return false;">
 </canvas>
