--- a/client/code/index.html
+++ b/client/code/index.html
@@ -37,6 +37,7 @@
 	<script src="hud/widgets/list.js" type="text/javascript"></script>
 	<script src="hud/widgets/list_layouts.js" type="text/javascript"></script>
 	<script src="hud/widgets/popup.js" type="text/javascript"></script>
+    <script src="hud/widgets/progressbar.js" type="text/javascript"></script>
 	<script src="hud/hud.js" type="text/javascript"></script>
 	<script src="hud/notification.js" type="text/javascript"></script>
 	<script src="graphic/map_item.js" type="text/javascript"></script>
