--- a/client/code/index.html
+++ b/client/code/index.html
@@ -26,8 +26,8 @@
 	<script src="cryme/network_subsystems.js" type="text/javascript"></script>
 	<script src="cryme/map.js" type="text/javascript"></script>
 	<script src="graphic/texture.js" type="text/javascript"></script>
-	<!--<script src="texture_animated.js" type="text/javascript"></script>-->
 	<script src="graphic/battleElement.js" type="text/javascript"></script>
+	<script src="graphic/battleSequence.js" type="text/javascript"></script>
 	<script src="hud/hud_element.js" type="text/javascript"></script>
 	<script src="hud/widgets/root.js" type="text/javascript"></script>
 	<script src="hud/widgets/text.js" type="text/javascript"></script>
@@ -37,7 +37,7 @@
 	<script src="hud/widgets/list.js" type="text/javascript"></script>
 	<script src="hud/widgets/list_layouts.js" type="text/javascript"></script>
 	<script src="hud/widgets/popup.js" type="text/javascript"></script>
-    <script src="hud/widgets/progressbar.js" type="text/javascript"></script>
+	<script src="hud/widgets/progressbar.js" type="text/javascript"></script>
 	<script src="hud/hud.js" type="text/javascript"></script>
 	<script src="hud/notification.js" type="text/javascript"></script>
 	<script src="graphic/map_item.js" type="text/javascript"></script>
