--- a/client/code/index.html
+++ b/client/code/index.html
@@ -53,6 +53,8 @@
 	<script src="entity/storage.js" type="text/javascript"></script>
 	<script src="entity/building.js" type="text/javascript"></script>
 	<script src="entity/character.js" type="text/javascript"></script>
+    <script src="sound/sound.js" type="text/javascript"></script>
+    <script src="sound/sound_engine.js" type="text/javascript"></script>
 	<!--<script src="particles.js" type="text/javascript"></script>-->
 	<script src="login.js" type="text/javascript"></script>
 	<script src="onload.js" type="text/javascript"></script>
