--- a/client/code/index.html
+++ b/client/code/index.html
@@ -27,6 +27,7 @@
 	<script src="cryme/map.js" type="text/javascript"></script>
 	<script src="graphic/texture.js" type="text/javascript"></script>
 	<script src="graphic/battleElement.js" type="text/javascript"></script>
+	<script src="graphic/battleTimeline.js" type="text/javascript"></script>
 	<script src="graphic/battleSequence.js" type="text/javascript"></script>
 	<script src="hud/hud_element.js" type="text/javascript"></script>
 	<script src="hud/widgets/root.js" type="text/javascript"></script>
@@ -53,8 +54,8 @@
 	<script src="entity/storage.js" type="text/javascript"></script>
 	<script src="entity/building.js" type="text/javascript"></script>
 	<script src="entity/character.js" type="text/javascript"></script>
-    <script src="sound/sound.js" type="text/javascript"></script>
-    <script src="sound/sound_engine.js" type="text/javascript"></script>
+	<script src="sound/sound.js" type="text/javascript"></script>
+	<script src="sound/sound_engine.js" type="text/javascript"></script>
 	<!--<script src="particles.js" type="text/javascript"></script>-->
 	<script src="login.js" type="text/javascript"></script>
 	<script src="onload.js" type="text/javascript"></script>
