--- a/client/code/index.html
+++ b/client/code/index.html
@@ -51,7 +51,7 @@
 	<script src="effects/tile_effect.js" type="text/javascript"></script>
 	<script src="effects/environment.js" type="text/javascript"></script>
 	<script src="entity/crop.js" type="text/javascript"></script>
-	<script src="entity/storage.js" type="text/javascript"></script>
+	<script src="entity/storedCrop.js" type="text/javascript"></script>
 	<script src="entity/building.js" type="text/javascript"></script>
 	<script src="entity/character.js" type="text/javascript"></script>
 	<script src="sound/sound.js" type="text/javascript"></script>
