--- a/client/code/register.html
+++ b/client/code/register.html
@@ -6,12 +6,20 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta name="viewport" content="initial-scale = 0.8, user-scalable = no">
 	<link rel="stylesheet" type="text/css" media="screen" href="style.css"/>
+    <script src="/socket.io/socket.io.js" type="text/javascript"></script>
 	<script src="register.js" type="text/javascript"></script>
-	<script src="onload.js" type="text/javascript"></script>
 	<title>FarmCry</title>
 	<link rel="shortcut icon" href="favicon.ico"/>
 </head>
 <body id="body">
+<div id="loading_panel" class="fc_window">
+    <div class="fc_window_content huge_text center">
+        Loading ...
+        <div id="loading_progress" class="progress-bar green stripes stripes-animated">
+            <span style="width: 0%"></span>
+        </div>
+    </div>
+</div>
 <div id="register">
 	<img id="register_game_title" src="src/login/game_title.png" alt="Farmcry"/>
 
